<resources>
    <string name="app_name">ProductApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="image">Imagen</string>
    <string name="title">Añade un producto</string>
    <string name="instructions">Rellena los siguientes datos\n para añadir el producto</string>
    <string name="empty_list">¡Lista vacía!</string>
    <string name="no_products">No se han agregado productos</string>
</resources>