<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.AddProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textStyle="bold"

            android:textSize="@dimen/text_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/instructions"
            android:textAlignment="center"

            android:textSize="@dimen/text_subtitle"/>

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/name"

            />

        <EditText
            android:id="@+id/et_Name"
            android:textSize="@dimen/text_body"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:inputType="textCapSentences"
            android:background="@drawable/round_border"
            android:padding="10dp"/>

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/description"

            />

        <EditText
            android:id="@+id/et_Description"
            android:textSize="@dimen/text_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:inputType="textCapSentences"
            android:background="@drawable/round_border"
            android:padding="10dp"/>

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/price"

            />

        <EditText
            android:id="@+id/et_Price"
            android:textSize="@dimen/text_body"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:background="@drawable/round_border"
            android:padding="10dp"/>

            <TextView
                android:id="@+id/help"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/image"

                />

        <EditText
            android:id="@+id/et_Image"
            android:textSize="@dimen/text_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:inputType="textCapSentences"
            android:background="@drawable/round_border"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btn_Add_Product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:text="Agregar"
            android:textColor="@color/black"
            android:backgroundTint="#38ff6b"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</ScrollView>